--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <body>
     <%= render partial: 'shared/navbar' %>
-    <div class="con" id="flash">
+    <div class="conflash" id="flash">
       <% flash.each do |type, msg| %>
         <div>
           <%= msg %>
