--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -1,1 +1,8 @@
-<%= render 'form' %>
+<p>Join us on this epicurean adventure as Bread & Wine becomes your trusted companion in the pursuit of culinary excellence.</p>
+<div class="bodycon">
+    <% @elem = "Sign Up" %>
+    <main class="form-signin w-100 m-auto bg-dark text-white rounded">
+        <h1 class="h3 mb-3 fw-normal">Sign Up</h1>
+            <%= render 'form' %>
+    </main>
+</div>
