--- a/app/views/login/_form.html.erb
+++ b/app/views/login/_form.html.erb
@@ -1,10 +1,11 @@
-<main class="form-signin w-100 m-auto bg-dark text-white rounded">
-    <h1 class="h3 mb-3 fw-normal">Log In</h1>
-    <%= bootstrap_form_with(scope: :login, url: login_path, local: true) do |f| %>
-        <%= f.email_field :email %>
-        <%= f.password_field :password %>
-        <%= f.check_box :remember_me %>
-        <%= f.submit "Log In" %>
-    <% end %>
+<div class="bodycon">
+    <main class="form-signin w-100 m-auto bg-dark text-white rounded">
+        <h1 class="h3 mb-3 fw-normal">Log In</h1>
+        <%= bootstrap_form_with(scope: :login, url: login_path, local: true) do |f| %>
+            <%= f.email_field :email %>
+            <%= f.password_field :password %>
+            <%= f.submit "Log In" %>
+        <% end %>
 
-</main>
+    </main>
+</div>
