--- a/app/views/recipes/_filled_steps.html.erb
+++ b/app/views/recipes/_filled_steps.html.erb
@@ -1,6 +1,6 @@
 <fieldset>
   <div>
-    <%= f.text_area :direction, name: "directions[]", label: 'Step'%>
+    <%= f.text_area :direction, name: "directions[]", value: step.direction, label: 'Step'%>
   </div>
   <div>
     <button type="button"  class="btn-close bg-light" onclick="deleteFields(this)" aria-label="Close"></button>
