--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center mt-4">Recipes</h1>
+<h1 class="text-center mt-4">Favorite Recipes</h1>
 
 <div class="flickr_pagination">
   <%= will_paginate @recipes, :container => false %>    
@@ -12,8 +12,7 @@
                                 <h4 class="card-title "> <%= recipe.recipe_name %> </h4>
                                 <div style="display: flex; justify-content: flex-end;">
                                     <%= link_to 'View', recipe_path(recipe), class: "btn btn-success float-right", style: "margin-right: 5%;" %>
-                                    <%= link_to 'Edit', edit_recipe_path(recipe), class: "btn btn-warning float-right", style: "margin-right: 5%;" %>
-                                    <%= button_to 'Delete', recipe_path(recipe), method: :delete, class: "btn btn-danger float-right" %>
+                                    <%= button_to 'Remove', '/favorites/' + recipe.id.to_s, method: :delete, class: "btn btn-danger float-right" %>
                                 </div>
                         </div>
                     </div>
@@ -24,7 +23,7 @@
                 <div class="card h-100 bg-dark ">
                     <%= image_tag "dummy.png", class: "card-img-top" %>
                     <div class="card-body text-light" style="display: flex; justify-content: space-between;" >
-                            <h4 class="card-title"> You haven't posted any recipes yet</h4>
+                            <h4 class="card-title"> You have no favorites</h4>
                     </div>
                 </div>
             </div>
