--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,6 +21,9 @@
             </ul>
           </li>
           <li class="nav-item">
+            <%= link_to 'Favorites', favorites_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
             <%= link_to 'Post', new_recipe_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
