--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,31 +1,81 @@
-<main>
+<main> 
+    <div id="myCarousel" class="carousel slide mb-6 " data-bs-ride="carousel" data-bs-theme="light">
 
-    <div class="carousel carousel-warning slide mb-6" data-bs-ride="carousel" data-bs-theme="light">
         <div class="carousel-indicators">
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="3" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="4" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="5" class="active" aria-current="true" aria-label="Slide 1"></button>
+
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="yellow"/></svg>
+                <%= image_tag "japanese.jpg", class: "bd-placeholder-img", style: "width: 100%; height: 100%" %>
                 <div class="container">
                     <div class="carousel-caption text-start">
-                        <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+                        <p><button class="btn btn-lg btn-primary" onclick="cuisine('japanese')">Japanese Cuisine</button></p>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <%= image_tag "indian.jpg", class: "bd-placeholder-img", style: "width: 100%; height: 100%" %>
+                <div class="container">
+                    <div class="carousel-caption text-start">
+                        <p><button class="btn btn-lg btn-primary" onclick="cuisine('indian')">Indian Cuisine</button></p>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <%= image_tag "chinese.jpg", class: "bd-placeholder-img", style: "width: 100%; height: 100%" %>
+                <div class="container">
+                    <div class="carousel-caption text-start">
+                        <p><button class="btn btn-lg btn-primary" onclick="cuisine('chinese')">Chinese Cuisine</button></p>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <%= image_tag "italian.jpg", class: "bd-placeholder-img", style: "width: 100%; height: 100%" %>
+                <div class="container">
+                    <div class="carousel-caption text-start">
+                        <p><button class="btn btn-lg btn-primary" onclick="cuisine('italian')">Italian Cuisine</button></p>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <%= image_tag "thai.jpeg", class: "bd-placeholder-img", style: "width: 100%; height: 100%" %>
+                <div class="container">
+                    <div class="carousel-caption text-start">
+                        <p><button class="btn btn-lg btn-primary" onclick="cuisine('thai')">Thai Cuisine</button></p>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <%= image_tag "mexican.jpg", class: "bd-placeholder-img", style: "width: 100%; height: 100%" %>
+                <div class="container">
+                    <div class="carousel-caption text-start">
+                        <p><button class="btn btn-lg btn-primary" onclick="cuisine('mexican')">Mexican Cuisine</button></p>
                     </div>
                 </div>
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="carousel-control-prev-icon bg-dark" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <button class="carousel-control-next " type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon bg-dark" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
     </div>
+
+    <script defer>
+        function cuisine(cui) {
+            window.location.href = '/recipes?cuisine=' + encodeURIComponent(cui);
+
+        }
+    </script>
 
 </main>
 
