--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -33,7 +33,7 @@
                   <% count += item.favorites.length %>
                 <% end %>
                 <p class="mb-2 h5"><%= count %></p>
-                <p class="text-muted mb-0">Liked</p>
+                <p class="text-muted mb-0">Liked by others</p>
               </div>
               <div>
                 <p class="mb-2 h5"><%= @user.favorites.length %></p>
