--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag "alert.js", "data-turbo-track": "reload", defer: true %>
 <!DOCTYPE html>
 <html>
   <head>
@@ -15,16 +16,23 @@
 
   <body>
     <%= render partial: 'shared/navbar' %>
-    <div class="conflash" id="flash">
-      <% flash.each do |type, msg| %>
-        <div>
-          <%= msg %>
+    <div class="flcon">
+      <div class="row">
+        <div class="col-xs-10 col-xs-offset-1">
+          <% flash.each do |name, msg| %>
+            <div class='alert <%="#{name}" %>'>
+            <span class="closebtn">&times;</span>  
+              <%= msg %>
+            </div>
+
+          <% end %>  
         </div>
-      <% end %>
-    </div>
+      </div>
+  </div>
     <div class="con">
       <%= yield %>
     </div>
+    <%= render partial: 'shared/footer' %>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
