--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -42,10 +42,12 @@
         <% end %>
         
       </ul>
-      <form class="d-flex" role="search" id= "search-bar" >
-        <input class="form-control me-2" id="query" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" id="s-button" type="submit" disabled> Search </button>
-      </form>
+      <% if logged_in? %>
+        <form class="d-flex" role="search" id= "search-bar" >
+          <input class="form-control me-2" id="query" type="search" placeholder="Search Food" aria-label="Search">
+          <button class="btn btn-outline-success" id="s-button" type="submit" disabled> Search </button>
+        </form>
+      <% end %>
 
       <script defer>
         document.addEventListener('DOMContentLoaded', function() {
